--- a/css/screen.css
+++ b/css/screen.css
@@ -4762,6 +4762,7 @@ ul.flickr li
 	width: 100%;
 	margin: 0 0 0 0;
 	text-align: left;
+	position: relative;
 }
 
 .portfolio_desc .menu_content_classic
